[package]
name = "mqtt-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Teemu R. <tpr@iki.fi"]
keywords = ["mqtt", "home-assistant"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
rumqttc = "0.24"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }  # TODO: no need to add all features
serde_json = "^1"
gethostname = "0.4"
shlex = "1.3"
dirs = "5"
